--- a/public/style.css
+++ b/public/style.css
@@ -16,8 +16,8 @@ video {
     margin-left: 1vw;
     width: 80vw;
     height: 90vh;
-    background-color: rgb(0,0,100);
-  
+    
+    background-image: linear-gradient(#1010F0 40%,#A0A050);
 }
 
 .main { 
